--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "db:push": "prisma db push",
         "db:pull": "prisma db pull",
         "db:generate": "prisma generate",
+        "email:dev": "email dev --dir=./src/emails",
         "clean": "rm -rf node_modules build",
         "format": "prettier --write **/*"
     },
@@ -31,6 +32,8 @@
         "@fastify/jwt": "^8.0.1",
         "@fastify/rate-limit": "^9.1.0",
         "@prisma/client": "^5.14.0",
+        "@react-email/components": "0.0.19",
+        "@react-email/tailwind": "0.0.18",
         "@types/jsonwebtoken": "^9.0.6",
         "argon2": "^0.40.3",
         "dayjs": "^1.11.11",
@@ -42,13 +45,18 @@
         "fastify-yup-schema": "^1.0.4",
         "ioredis": "^5.4.1",
         "jsonwebtoken": "^9.0.2",
+        "nodemailer": "^6.9.13",
+        "react-email": "2.1.4",
         "zod": "^3.23.8"
     },
     "devDependencies": {
-        "@types/node": "^20.12.12",
+        "@types/node": "^20.12.13",
+        "@types/nodemailer": "^6.4.15",
+        "@types/react": "^18.3.3",
         "pino-pretty": "^11.1.0",
         "prettier": "^3.2.5",
         "prisma": "^5.14.0",
+        "react": "^18.3.1",
         "tsx": "^4.11.0",
         "typescript": "^5.4.5"
     }
