--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@aelpxy/kepler",
     "version": "0.0.0",
-    "description": "Inspired by the exoplanet.",
+    "description": "A template for bootstrapping your backend within minutes.",
     "main": "./src/index.ts",
     "scripts": {
         "start": "export NODE_ENV=production && node ./build/main.ts",
@@ -31,7 +31,7 @@
         "@fastify/helmet": "^11.1.1",
         "@fastify/jwt": "^8.0.1",
         "@fastify/rate-limit": "^9.1.0",
-        "@prisma/client": "^5.15.0",
+        "@prisma/client": "^5.15.1",
         "@react-email/components": "0.0.19",
         "@react-email/tailwind": "0.0.18",
         "@types/jsonwebtoken": "^9.0.6",
@@ -41,22 +41,23 @@
         "fast-jwt": "^4.0.1",
         "fastify": "^4.28.0",
         "fastify-plugin": "^4.5.1",
-        "fastify-type-provider-zod": "^1.2.0",
+        "fastify-type-provider-zod": "^2.0.0",
         "ioredis": "^5.4.1",
         "jsonwebtoken": "^9.0.2",
-        "nodemailer": "^6.9.13",
+        "nodemailer": "^6.9.14",
         "react-email": "2.1.4",
         "zod": "^3.23.8"
     },
     "devDependencies": {
-        "@types/node": "^20.14.2",
+        "@types/node": "^20.14.8",
         "@types/nodemailer": "^6.4.15",
         "@types/react": "^18.3.3",
         "pino-pretty": "^11.2.1",
         "prettier": "^3.3.2",
-        "prisma": "^5.15.0",
+        "prisma": "^5.15.1",
         "react": "^18.3.1",
-        "tsx": "^4.15.4",
-        "typescript": "^5.4.5"
+        "tsx": "^4.15.7",
+        "typescript": "^5.5.2",
+        "typescript-eslint": "^7.14.1"
     }
 }
