--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
-    "name": "@aelpxy/kepler",
-    "version": "0.0.0",
-    "description": "A template for bootstrapping your backend within minutes.",
-    "main": "./src/index.ts",
-    "scripts": {
-        "start": "export NODE_ENV=production && node ./build/main.ts",
-        "build": "rm -rf build && pnpm db:generate && tsc",
-        "dev": "export NODE_ENV=development && tsx watch ./src/main.ts | pino-pretty",
-        "db:push": "prisma db push",
-        "db:pull": "prisma db pull",
-        "db:generate": "prisma generate",
-        "email:dev": "email dev --dir=./src/emails",
-        "clean": "rm -rf node_modules build",
-        "format": "prettier --write **/*"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/aelpxy/kepler.git"
-    },
-    "keywords": [],
-    "author": "aelpxy <aelpxy@velta.dev>",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/aelpxy/kepler/issues"
-    },
-    "homepage": "https://github.com/aelpxy/kepler#readme",
-    "dependencies": {
-        "@fastify/cors": "^9.0.1",
-        "@fastify/etag": "^5.2.0",
-        "@fastify/helmet": "^11.1.1",
-        "@fastify/jwt": "^8.0.1",
-        "@fastify/rate-limit": "^9.1.0",
-        "@prisma/client": "^5.15.1",
-        "@react-email/components": "0.0.19",
-        "@react-email/tailwind": "0.0.18",
-        "@types/jsonwebtoken": "^9.0.6",
-        "argon2": "^0.40.3",
-        "dayjs": "^1.11.11",
-        "dotenv": "^16.4.5",
-        "fast-jwt": "^4.0.1",
-        "fastify": "^4.28.0",
-        "fastify-plugin": "^4.5.1",
-        "fastify-type-provider-zod": "^2.0.0",
-        "ioredis": "^5.4.1",
-        "jsonwebtoken": "^9.0.2",
-        "nodemailer": "^6.9.14",
-        "react-email": "2.1.4",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "@types/node": "^20.14.8",
-        "@types/nodemailer": "^6.4.15",
-        "@types/react": "^18.3.3",
-        "pino-pretty": "^11.2.1",
-        "prettier": "^3.3.2",
-        "prisma": "^5.15.1",
-        "react": "^18.3.1",
-        "tsx": "^4.15.7",
-        "typescript": "^5.5.2",
-        "typescript-eslint": "^7.14.1"
-    }
+  "name": "@aelpxy/kepler",
+  "version": "0.0.0",
+  "description": "A template for bootstrapping your backend within minutes.",
+  "main": "./src/index.ts",
+  "scripts": {
+    "start": "export NODE_ENV=production && node ./build/main.ts",
+    "build": "rm -rf build && pnpm db:generate && tsc",
+    "dev": "export NODE_ENV=development && tsx watch ./src/main.ts | pino-pretty",
+    "db:push": "prisma db push",
+    "db:pull": "prisma db pull",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "email:dev": "email dev --dir=./src/emails",
+    "clean": "rm -rf node_modules build",
+    "format": "biome format --write **/*",
+    "lint": "biome lint --write **/*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aelpxy/kepler.git"
+  },
+  "keywords": [],
+  "author": "aelpxy <aelpxy@velta.dev>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/aelpxy/kepler/issues"
+  },
+  "homepage": "https://github.com/aelpxy/kepler#readme",
+  "dependencies": {
+    "@fastify/cors": "^9.0.1",
+    "@fastify/etag": "^5.2.0",
+    "@fastify/helmet": "^11.1.1",
+    "@fastify/jwt": "^8.0.1",
+    "@fastify/rate-limit": "^9.1.0",
+    "@prisma/client": "^5.15.1",
+    "@react-email/components": "0.0.19",
+    "@react-email/tailwind": "0.0.18",
+    "@types/jsonwebtoken": "^9.0.6",
+    "argon2": "^0.40.3",
+    "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
+    "fast-jwt": "^4.0.1",
+    "fastify": "^4.28.0",
+    "fastify-plugin": "^4.5.1",
+    "fastify-type-provider-zod": "^2.0.0",
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.14",
+    "react-email": "2.1.4",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.8.3",
+    "@types/node": "^20.14.8",
+    "@types/nodemailer": "^6.4.15",
+    "@types/react": "^18.3.3",
+    "pino-pretty": "^11.2.1",
+    "prisma": "^5.15.1",
+    "react": "^18.3.1",
+    "tsx": "^4.15.7",
+    "typescript": "^5.5.2"
+  }
 }
