--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "export NODE_ENV=production && node ./build/main.ts",
     "build": "rm -rf build && pnpm db:generate && tsc",
     "dev": "export NODE_ENV=development && tsx watch ./src/main.ts | pino-pretty",
-    "db:push": "prisma db push",
-    "db:pull": "prisma db pull",
-    "db:generate": "prisma generate",
-    "db:studio": "prisma studio",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:pull": "drizzle-kit pull",
+    "db:studio": "drizzle-kit studio",
     "email:dev": "email dev --dir=./src/emails",
     "clean": "rm -rf node_modules build",
     "format": "biome format --write **/*",
@@ -33,13 +33,14 @@
     "@fastify/helmet": "^11.1.1",
     "@fastify/jwt": "^8.0.1",
     "@fastify/rate-limit": "^9.1.0",
-    "@prisma/client": "^5.15.1",
     "@react-email/components": "0.0.19",
     "@react-email/tailwind": "0.0.18",
     "@types/jsonwebtoken": "^9.0.6",
     "argon2": "^0.40.3",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.2",
+    "drizzle-zod": "^0.5.1",
     "fast-jwt": "^4.0.1",
     "fastify": "^4.28.0",
     "fastify-plugin": "^4.5.1",
@@ -47,6 +48,7 @@
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
+    "pg": "^8.12.0",
     "react-email": "2.1.4",
     "zod": "^3.23.8"
   },
@@ -54,9 +56,10 @@
     "@biomejs/biome": "1.8.3",
     "@types/node": "^20.14.8",
     "@types/nodemailer": "^6.4.15",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18.3.3",
+    "drizzle-kit": "^0.22.8",
     "pino-pretty": "^11.2.1",
-    "prisma": "^5.15.1",
     "react": "^18.3.1",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2"
