--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@fastify/rate-limit": "^9.1.0",
     "@react-email/components": "0.0.21",
     "@react-email/tailwind": "0.0.18",
-    "argon2": "^0.40.3"`,
+    "argon2": "^0.40.3",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
